--- a/src/lib/slick.grid.css
+++ b/src/lib/slick.grid.css
@@ -32,7 +32,7 @@ classes should alter those!
   border-left: 0px;
   border-top: 0px;
   border-bottom: 0px;
-  float: left;
+  text-align: center;
 }
 
 .slick-headerrow-column.ui-state-default {
@@ -53,11 +53,11 @@ classes should alter those!
 }
 
 .slick-sort-indicator-desc {
-  background: url(images/sort-desc.gif);
+  background: url(../images/sort-desc.gif);
 }
 
 .slick-sort-indicator-asc {
-  background: url(images/sort-asc.gif);
+  background: url(../images/sort-asc.gif);
 }
 
 .slick-resizable-handle {
