--- a/src/options.css
+++ b/src/options.css
@@ -97,3 +97,63 @@ div:not(.new-row) > .r3.slick-cell:empty {
 	line-height: 24px;
 	opacity: 50%;
 }
+
+
+/*Modal CSS Start*/
+.md-dialog {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.4);
+  }
+  .md-dialog.md-dialog-visible {
+	display: block;
+  }
+  .md-dialog .md-dialog-window {
+	border: 1px solid #888;
+	background-color: #fefefe;
+	width: 80%;
+	margin: 10% auto;
+  }
+  .md-dialog .md-dialog-header {
+	position: relative;
+	width: calc(100% - 0.5em);
+	height: 1.667em;
+	font-weight: bold;
+	font-size: 1.33em;
+	line-height: 1.667em;
+	padding: 0.125em 0.25em;
+	background-color: #DDD;
+  }
+  .md-dialog .md-dialog-header-close-btn {
+	position: absolute;
+	font-weight: bold;
+	top: 0;
+	right: 0;
+	width: 0.875em;
+	height: 0.875em;
+	line-height: 1em;
+	padding: 0.1em;
+	color: #7F7F7F;
+  }
+  .md-dialog .md-dialog-header-close-btn:before {
+	content: '\2715';
+  }
+  .md-dialog .md-dialog-header-close-btn:hover,
+  .md-dialog .md-dialog-header-close-btn:focus {
+	color: #FFF;
+	text-decoration: none;
+	cursor: pointer;
+	background: #F00;
+  }
+  .md-dialog .md-dialog-content {
+	width: 100%;
+	padding: 0.25em;
+  }
+  /*Modal CSS End*/
